.bin/iptables-generate
#!/bin/bash

EXTIF="eth0"
INTIF="eth1"
INTIP="172.16.42.42"
INTNET="172.16.42.0/24"
LOGDROPLIMIT="2/s"
LOGDROPLIMITBURST="10"

mv /etc/iptables/iptables.rules /etc/iptables/iptables.rules.old
cat >/etc/iptables/iptables.rules  <<EOF
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-N LOGDROP
-A LOGDROP -p tcp -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "TCP LOGDROP: "
-A LOGDROP -p udp -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "UDP LOGDROP: "
-A LOGDROP -p icmp -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "ICMP LOGDROP: "
-A LOGDROP -f -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "FRAGMENT LOGDROP: "
-A LOGDROP -j DROP

-N LOGACCEPT
-A LOGACCEPT -p tcp -j LOG --log-prefix "TCP LOGACCEPT: "
-A LOGACCEPT -p udp -j LOG --log-prefix "UDP LOGACCEPT: "
-A LOGACCEPT -p icmp -j LOG --log-prefix "ICMP LOGACCEPT: "
-A LOGACCEPT -f -j LOG --log-prefix "FRAGMENT LOGACCEPT: "
-A LOGACCEPT -j ACCEPT

# Loopback is always okay
-A INPUT -i lo -j ACCEPT

# Any incoming not headed for the external IP drop (actually I don't want to
# need $EXTIP if I don't need it )
#-A INPUT -i $EXTIF ! -d $EXTIP -j DROP

# ICMP
-A INPUT -p ICMP -j ACCEPT

# DHCP server
-A INPUT -i $INTIF -p tcp --sport 67 --dport 68 -j ACCEPT
-A INPUT -i $INTIF -p udp --sport 67 --dport 68 -j ACCEPT

# SSH server
-A INPUT -p tcp --dport 22 -j ACCEPT

# TFTP server
-A INPUT -p udp --dport 69 -j ACCEPT

# Minecraft server
-A INPUT -p tcp --dport 25565 -j ACCEPT
-A INPUT -p udp --dport 25565 -j ACCEPT

# Existing connections are fine
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# New ones are too unless they're from outside
-A INPUT -m conntrack --ctstate NEW ! -i $EXTIF -j ACCEPT

# Forwarding existing connections to the internal interface is fine
-A FORWARD -i $EXTIF -o $INTIF -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Internal network to universe is fine
-A FORWARD -i $INTIF -o $EXTIF -j ACCEPT

# Don't forward traffic from outside to outside
-A FORWARD -i $EXTIF -o $EXTIF -j REJECT

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# Masquerade outgoing for NAT
-A POSTROUTING -o $EXTIF -j MASQUERADE

COMMIT
EOF

systemctl restart iptables


EXTIF=sixxs
#INTIF=br0 # always br0 # leave set from above
INTIP=2001:4830:119c::1

mv /etc/iptables/ip6tables.rules /etc/iptables/ip6tables.rules.old

cat >/etc/iptables/ip6tables.rules <<EOF
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Bad Stuff (don't copy over)
-A INPUT -m rt --rt-type 0 -j DROP
-A FORWARD -m rt --rt-type 0 -j DROP
-A OUTPUT -m rt --rt-type 0 -j DROP

-N LOGDROP
-A LOGDROP -p tcp -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "TCP LOGDROP: "
-A LOGDROP -p udp -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "UDP LOGDROP: "
-A LOGDROP -p icmp -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "ICMP LOGDROP: "
-A LOGDROP -m limit --limit $LOGDROPLIMIT --limit-burst $LOGDROPLIMITBURST -j LOG --log-prefix "FRAGMENT LOGDROP: "
-A LOGDROP -j DROP

-N LOGACCEPT
-A LOGACCEPT -p tcp -j LOG --log-prefix "TCP LOGACCEPT: "
-A LOGACCEPT -p udp -j LOG --log-prefix "UDP LOGACCEPT: "
-A LOGACCEPT -p icmp -j LOG --log-prefix "ICMP LOGACCEPT: "
-A LOGACCEPT -j LOG --log-prefix "FRAGMENT LOGACCEPT: "
-A LOGACCEPT -j ACCEPT

# Loopback is always okay
-A INPUT -i lo -j ACCEPT

# Any incoming not headed for the external IP drop (actually I don't want to
# need $EXTIP if I don't need it )
#-A INPUT -i $EXTIF ! -d $EXTIP -j DROP

# ICMP
-A INPUT -p ICMP -j ACCEPT

# DHCP server
-A INPUT -i $INTIF -p tcp --sport 67 --dport 68 -j ACCEPT
-A INPUT -i $INTIF -p udp --sport 67 --dport 68 -j ACCEPT

# SSH server
-A INPUT -p tcp --dport 22 -j ACCEPT

# TFTP server
-A INPUT -p udp --dport 69 -j ACCEPT

# Minecraft server
-A INPUT -p tcp --dport 25565 -j ACCEPT
-A INPUT -p udp --dport 25565 -j ACCEPT

# Existing connections are fine
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# New ones are too unless they're from outside
-A INPUT -m conntrack --ctstate NEW ! -i $EXTIF -j ACCEPT

# Forwarding existing connections to the internal interface is fine
-A FORWARD -i $EXTIF -o $INTIF -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Internal network to universe is fine
-A FORWARD -i $INTIF -o $EXTIF -j ACCEPT

# Don't forward traffic from outside to outside
-A FORWARD -i $EXTIF -o $EXTIF -j REJECT

COMMIT
EOF

systemctl restart ip6tables


#ip -6 ro add 2001:4830:119c::/48 dev lo
#systemctl start radvd
#systemctl start aiccu
